--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tuplerone",
-  "version": "2.0.0-beta",
+  "version": "2.0.0",
   "description": "A yet another tuple implementation",
   "keywords": [
     "tuple",
@@ -11,7 +11,8 @@
     "data structures",
     "immutability",
     "memoization",
-    "hashing"
+    "hashing",
+    "value objects"
   ],
   "main": "dist/tuplerone.umd.js",
   "module": "dist/tuplerone.es5.js",
@@ -31,7 +32,7 @@
   "scripts": {
     "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --target es6 --theme minimal --mode file src",
+    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --excludeNotExported --out docs --target es6 --theme minimal --mode file src",
     "start": "rollup -c rollup.config.ts -w",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -91,8 +92,8 @@
   },
   "devDependencies": {
     "@types/jest": "^22.0.0",
-    "@types/node": "^10.5.2",
-    "colors": "^1.1.2",
+    "@types/node": "^10.5.4",
+    "colors": "^1.3.1",
     "commitizen": "^2.9.6",
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
@@ -101,21 +102,21 @@
     "jest": "^22.0.2",
     "lint-staged": "^7.2.0",
     "lodash.camelcase": "^4.3.0",
-    "prettier": "^1.13.7",
+    "prettier": "^1.14.0",
     "prompt": "^1.0.0",
     "replace-in-file": "^3.0.0-beta.2",
     "rimraf": "^2.6.1",
     "rollup": "^0.58.0",
-    "rollup-plugin-commonjs": "^9.0.0",
+    "rollup-plugin-commonjs": "^9.1.4",
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.11.1",
-    "semantic-release": "^15.8.1",
+    "semantic-release": "^15.9.1",
     "ts-jest": "^22.0.0",
     "ts-node": "^6.2.0",
-    "tslint": "^5.8.0",
-    "tslint-config-prettier": "^1.1.0",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.14.0",
     "tslint-config-slikts": "^1.0.3",
     "typedoc": "^0.11.0",
     "typescript": "^2.9.2",
