--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "author": "slikts <dabas@untu.ms>",
   "repository": {
     "type": "git",
-    "url": "https:git@github.com:slikts/tuplerone.git"
+    "url": "git://git@github.com:slikts/tuplerone.git"
   },
   "license": "MIT",
   "engines": {
@@ -91,36 +91,38 @@
     "trailingComma": "all"
   },
   "devDependencies": {
-    "@types/jest": "^22.0.0",
-    "@types/node": "^10.5.4",
+    "@types/jest": "^23.3.1",
+    "@types/node": "^10.5.5",
     "colors": "^1.3.1",
     "commitizen": "^2.9.6",
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.0.0",
     "husky": "^0.14.0",
-    "jest": "^22.0.2",
+    "jest": "^23.4.2",
     "lint-staged": "^7.2.0",
     "lodash.camelcase": "^4.3.0",
     "prettier": "^1.14.0",
     "prompt": "^1.0.0",
     "replace-in-file": "^3.0.0-beta.2",
     "rimraf": "^2.6.1",
-    "rollup": "^0.58.0",
+    "rollup": "^0.63.5",
     "rollup-plugin-commonjs": "^9.1.4",
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.11.1",
-    "semantic-release": "^15.9.1",
-    "ts-jest": "^22.0.0",
-    "ts-node": "^6.2.0",
+    "rollup-plugin-typescript2": "^0.16.1",
+    "semantic-release": "^15.9.3",
+    "ts-jest": "^23.0.1",
+    "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.14.0",
-    "tslint-config-slikts": "^1.0.3",
+    "tslint-config-slikts": "^2.0.0",
     "typedoc": "^0.11.0",
-    "typescript": "^2.9.2",
+    "typescript": "^3.0.1",
+    "typestrict": "0.0.9",
     "validate-commit-msg": "^2.12.2"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "bugs": "https://github.com/slikts/tuplerone/issues"
 }
