--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.1",
     "@types/node": "^10.5.6",
+    "babel-jest": "^23.4.2",
     "colors": "^1.3.1",
     "commitizen": "^2.9.6",
     "coveralls": "^3.0.2",
