--- a/package.json
+++ b/package.json
@@ -91,36 +91,36 @@
     "trailingComma": "all"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.1",
-    "@types/node": "^10.5.6",
-    "babel-jest": "^23.4.2",
-    "colors": "^1.3.1",
+    "@types/jest": "^23.3.9",
+    "@types/node": "^10.12.9",
+    "babel-jest": "^23.6.0",
+    "colors": "^1.3.2",
     "commitizen": "^2.9.6",
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.0.0",
     "husky": "^0.14.0",
-    "jest": "^23.4.2",
-    "lint-staged": "^7.2.0",
+    "jest": "^23.6.0",
+    "lint-staged": "^7.3.0",
     "lodash.camelcase": "^4.3.0",
-    "prettier": "^1.14.0",
+    "prettier": "^1.15.2",
     "prompt": "^1.0.0",
-    "replace-in-file": "^3.0.0-beta.2",
+    "replace-in-file": "^3.4.2",
     "rimraf": "^2.6.1",
     "rollup": "^0.63.5",
-    "rollup-plugin-commonjs": "^9.1.4",
-    "rollup-plugin-json": "^3.0.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.16.1",
-    "semantic-release": "^15.9.5",
-    "ts-jest": "^23.1.2",
-    "ts-node": "^7.0.0",
+    "semantic-release": "^15.12.0",
+    "ts-jest": "^23.10.4",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.14.0",
-    "tslint-config-slikts": "^2.0.1",
+    "tslint-config-prettier": "^1.16.0",
+    "tslint-config-slikts": "^2.0.4",
     "typedoc": "^0.11.0",
-    "typescript": "^3.0.1",
+    "typescript": "^3.1.6",
     "typestrict": "0.0.9",
     "validate-commit-msg": "^2.12.2"
   },
