--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "author": "slikts <dabas@untu.ms>",
   "repository": {
     "type": "git",
-    "url": "git://git@github.com:slikts/tuplerone.git"
+    "url": "git+https://github.com/slikts/tuplerone.git"
   },
   "license": "MIT",
   "engines": {
