--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "scripts": {
     "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --excludeNotExported --out docs --target es6 --theme minimal --mode file src",
+    "build": "tsc --module commonjs && rollup -c rollup.config.ts && npm run build:doc",
+    "build:doc": "typedoc --excludeNotExported --out docs --target es6 --theme minimal --mode file src",
     "start": "rollup -c rollup.config.ts -w",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -63,7 +64,7 @@
   },
   "jest": {
     "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      ".ts": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "moduleFileExtensions": [
@@ -91,38 +92,38 @@
     "trailingComma": "all"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.9",
-    "@types/node": "^10.12.9",
-    "babel-jest": "^23.6.0",
-    "colors": "^1.3.2",
-    "commitizen": "^2.9.6",
-    "coveralls": "^3.0.2",
-    "cross-env": "^5.2.0",
-    "cz-conventional-changelog": "^2.0.0",
-    "husky": "^0.14.0",
-    "jest": "^23.6.0",
-    "lint-staged": "^7.3.0",
+    "@types/jest": "^24.0.19",
+    "@types/node": "^12.11.1",
+    "babel-jest": "^24.9.0",
+    "colors": "^1.4.0",
+    "commitizen": "^4.0.3",
+    "coveralls": "^3.0.7",
+    "cross-env": "^6.0.3",
+    "cz-conventional-changelog": "^3.0.2",
+    "husky": "^3.0.9",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.4.2",
     "lodash.camelcase": "^4.3.0",
-    "prettier": "^1.15.2",
+    "prettier": "^1.18.2",
     "prompt": "^1.0.0",
-    "replace-in-file": "^3.4.2",
-    "rimraf": "^2.6.1",
-    "rollup": "^0.63.5",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
+    "replace-in-file": "^4.1.3",
+    "rimraf": "^3.0.0",
+    "rollup": "^1.25.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.16.1",
-    "semantic-release": "^15.12.0",
-    "ts-jest": "^23.10.4",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.16.0",
+    "rollup-plugin-typescript2": "^0.24.3",
+    "semantic-release": "^15.13.27",
+    "ts-jest": "^24.1.0",
+    "ts-node": "^8.4.1",
+    "tslint": "^5.20.0",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-config-slikts": "^2.0.4",
-    "typedoc": "^0.11.0",
-    "typescript": "^3.1.6",
-    "typestrict": "0.0.9",
-    "validate-commit-msg": "^2.12.2"
+    "typedoc": "^0.15.0",
+    "typescript": "^3.6.4",
+    "typestrict": "1.0.2",
+    "validate-commit-msg": "^2.14.0"
   },
   "dependencies": {},
   "bugs": "https://github.com/slikts/tuplerone/issues"
