--- a/package.json
+++ b/package.json
@@ -42,10 +42,7 @@
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "commit": "git-cz",
     "semantic-release": "semantic-release",
-    "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
-    "precommit": "lint-staged",
-    "prepush": "npm run test:prod && npm run build",
-    "commitmsg": "validate-commit-msg"
+    "semantic-release-prepare": "ts-node tools/semantic-release-prepare"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
@@ -87,7 +84,7 @@
     "collectCoverage": true
   },
   "prettier": {
-    "semi": false,
+    "semi": true,
     "singleQuote": true,
     "trailingComma": "all"
   },
@@ -126,5 +123,12 @@
     "validate-commit-msg": "^2.14.0"
   },
   "dependencies": {},
-  "bugs": "https://github.com/slikts/tuplerone/issues"
+  "bugs": "https://github.com/slikts/tuplerone/issues",
+  "husky": {
+    "hooks": {
+      "commit-msg": "validate-commit-msg",
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run test:prod && npm run build"
+    }
+  }
 }
