--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,12 @@ language: node_js
 branches:
   only:
     - master
-    - /^greenkeeper/.*$/
-cache:
-  yarn: true
-  directories:
-    - node_modules
+cache: npm
 notifications:
   email: false
 node_js:
-  - 12
+  - node
+  - 'lts/*'
 script:
   - npm run test:prod && npm run build
 after_success:
