--- a/package.json
+++ b/package.json
@@ -93,12 +93,12 @@
     "babel-jest": "^24.9.0",
     "colors": "^1.4.0",
     "commitizen": "^4.0.3",
-    "coveralls": "^3.0.8",
+    "coveralls": "^3.0.9",
     "cross-env": "^6.0.3",
     "cz-conventional-changelog": "^3.0.2",
     "husky": "^3.1.0",
     "jest": "^24.9.0",
-    "lint-staged": "^9.4.3",
+    "lint-staged": "^9.5.0",
     "lodash.camelcase": "^4.3.0",
     "prettier": "^1.19.1",
     "prompt": "^1.0.0",
@@ -111,7 +111,7 @@
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.25.3",
     "semantic-release": "^15.14.0",
-    "ts-jest": "^24.1.0",
+    "ts-jest": "^24.2.0",
     "ts-node": "^8.5.4",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
@@ -121,7 +121,9 @@
     "typestrict": "1.0.2",
     "validate-commit-msg": "^2.14.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@wessberg/rollup-plugin-ts": "^1.2.3"
+  },
   "bugs": "https://github.com/slikts/tuplerone/issues",
   "husky": {
     "hooks": {
