--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
   "devDependencies": {
     "@types/jest": "^25.1.3",
     "@types/node": "^13.7.4",
+    "@wessberg/rollup-plugin-ts": "^1.2.17",
     "babel-jest": "^25.1.0",
     "colors": "^1.4.0",
     "commitizen": "^4.0.3",
@@ -119,9 +120,6 @@
     "typescript": "^3.8.2",
     "typestrict": "1.0.2",
     "validate-commit-msg": "^2.14.0"
-  },
-  "dependencies": {
-    "@wessberg/rollup-plugin-ts": "^1.2.17"
   },
   "bugs": "https://github.com/slikts/tuplerone/issues",
   "husky": {
