--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
   "scripts": {
     "lint:eslint": "eslint .",
     "lint:prettier": "prettier --check .",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "husky install",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
@@ -77,31 +80,26 @@
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-typescript": "^7.22.5",
-    "@types/babel__core": "^7",
-    "@types/babel__preset-env": "^7",
-    "@types/eslint": "^8",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.4.10",
+    "@types/babel__core": "^7.20.1",
+    "@types/babel__preset-env": "^7.9.2",
+    "@types/eslint": "^8.44.1",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
-    "colors": "^1.4.0",
     "commitizen": "^4.3.0",
-    "coveralls": "^3.1.0",
-    "cross-env": "^7.0.3",
+    "coveralls": "^3.1.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.45.0",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-tsdoc": "^0.2.17",
-    "husky": "^6.0.0",
-    "jest": "latest",
-    "lint-staged": "^13.2.2",
+    "husky": "^8.0.3",
+    "jest": "^29.6.1",
+    "lint-staged": "^13.2.3",
     "lodash.camelcase": "^4.3.0",
-    "prettier": "^2.3.2",
-    "prompt": "^1.3.0",
-    "replace-in-file": "^6.2.0",
-    "rimraf": "^4.1.1",
-    "typescript": "latest",
-    "typestrict": "1.0.2",
+    "pinst": "^3.0.0",
+    "prettier": "^3.0.0",
+    "typescript": "^5.1.6",
     "validate-commit-msg": "^2.14.0"
   },
   "bugs": "https://github.com/slikts/tuplerone/issues",
