chore: remove tslint comments

--- a/.releaserc
+++ b/.releaserc
@@ -3,10 +3,10 @@ branches:
   - name: next
     prerelease: true
 debug: true
-ci: true
+# ci: true
 dryRun: false
 plugins:
   - '@semantic-release/commit-analyzer'
   - '@semantic-release/release-notes-generator'
-  - '@semantic-release/github'
+  # - '@semantic-release/github'
   - '@semantic-release/npm'
