--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "pinst": "^3.0.0",
     "prettier": "^3.0.0",
     "semantic-release": "^21.0.7",
+    "typedoc": "^0.24.8",
     "typescript": "^5.1.6"
   },
   "bugs": "https://github.com/slikts/tuplerone/issues",
