--- a/package.json
+++ b/package.json
@@ -81,11 +81,11 @@
     "commitizen": "^4.3.0",
     "coveralls": "^3.1.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.45.0",
+    "eslint": "^8.46.0",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-tsdoc": "^0.2.17",
     "husky": "^8.0.3",
-    "jest": "^29.6.1",
+    "jest": "^29.6.2",
     "lint-staged": "^13.2.3",
     "lodash.camelcase": "^4.3.0",
     "microbundle": "^0.15.1",
@@ -94,7 +94,7 @@
     "prettier": "^3.0.0",
     "semantic-release": "^21.0.7",
     "typedoc": "^0.24.8",
-    "typescript": "5.2.0-beta",
+    "typescript": "5.2.0-dev.20230731",
     "v8-natives": "^1.2.5"
   },
   "bugs": "https://github.com/slikts/tuplerone/issues",
