--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "commitizen": "^4.3.0",
     "coveralls": "^3.1.1",
     "cz-conventional-changelog": "^3.3.0",
+    "dotenv-cli": "^7.2.1",
     "eslint": "^8.46.0",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-tsdoc": "^0.2.17",
@@ -94,8 +95,7 @@
     "prettier": "^3.0.0",
     "semantic-release": "^21.0.7",
     "typedoc": "^0.24.8",
-    "typescript": "5.2.0-dev.20230731",
-    "v8-natives": "^1.2.5"
+    "typescript": "5.2.0-dev.20230731"
   },
   "bugs": "https://github.com/slikts/tuplerone/issues",
   "husky": {
