--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "prettier": "^3.0.0",
     "semantic-release": "^21.0.7",
     "typedoc": "^0.24.8",
-    "typescript": "5.2.0-dev.20230731"
+    "typescript": "5.2.0-beta"
   },
   "bugs": "https://github.com/slikts/tuplerone/issues",
   "husky": {
