chore: add pre-push hook

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -58,21 +58,21 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-  # docs:
-  #   name: Docs
-  #   runs-on: ubuntu-latest
-  #   needs: [test, lint]
-  #   steps:
-  #     - uses: actions/checkout@v3
+  docs:
+    name: Docs
+    runs-on: ubuntu-latest
+    needs: [test, lint]
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - uses: ./.github/actions/setup
+      - uses: ./.github/actions/setup
 
-  #     - name: Generate
-  #       run: yarn docs
+      - name: Generate
+        run: yarn docs
 
-  #     - name: Publish
-  #       uses: peaceiris/actions-gh-pages@v3
-  #       if: ${{ github.ref == 'refs/heads/main' }}
-  #       with:
-  #         github_token: ${{ secrets.GITHUB_TOKEN }}
-  #         publish_dir: ./docs
+      - name: Publish
+        uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.ref == 'refs/heads/main' }}
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs
