--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lint:eslint": "eslint .",
     "lint:prettier": "prettier --check .",
     "test": "jest",
-    "postinstall": "husky install",
+    "postinstall": "is-ci || husky install",
     "prepack": "pinst --disable",
     "postpack": "pinst --enable",
     "build": "nanobundle build",
@@ -86,6 +86,7 @@
     "@types/babel__core": "^7.20.1",
     "@types/babel__preset-env": "^7.9.2",
     "@types/eslint": "^8.44.1",
+    "@types/is-ci": "^3",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
@@ -98,6 +99,7 @@
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-tsdoc": "^0.2.17",
     "husky": "^8.0.3",
+    "is-ci": "^3.0.1",
     "jest": "^29.6.2",
     "lint-staged": "^13.2.3",
     "lodash.camelcase": "^4.3.0",
